libemu/include/headless.h

    typedef enum {
        INPUT_KEY_DOWN,
        INPUT_KEY_UP
    } mame_input_enum_t;
    typedef struct {
        uint8_t key;
        mame_input_enum_t type;
    } mame_input_event_t;
    typedef struct {
        uint8_t *buffer;
        size_t buf_size;
    } mame_image_frame_t;
    typedef struct {
        const int16_t *buffer;
        const int sample_rate;
        const int samples;
        const int channels;
    } mame_sound_frame_t;